--- a/index.html
+++ b/index.html
@@ -4,10 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=Encode+Sans+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Encode+Sans+Semi+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Gowun+Batang&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+
+            <h3>Bangladesh 2.0</h3>
+            <button>Sign In</button>
+    </header>
+
+    <section class="section1">
+        <div class="container">
+            <div class="texts">
+                <h3>Bangladesh 2.0</h3>
+                <h1>Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h1>
+                <button>Explore New Bangladesh</button>
+            </div>
+           <img src="assets/hero.png" alt="">
+        </div>
+    </section>
+
+    <section class="section2">
+        <div class="container">
+            <h1>Pillars of "Bangladesh 2.0"</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section3">
+        <div class="container3">
+            <h1>The Vision of Future</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <div class="card-containers">
+                <div class="card card1">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn btn1">Learn More</button>
+                </div>
+                <div class="card card2">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn btn2">Learn More</button>
+                </div>
+                <div class="card card3">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn btn3">Learn More</button>
+                </div>
+            </div>
+
+            <div class="texts-container">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h3>Dr. Muhammad Yunus</h3>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="section4">
+        <div class="container4">
+            <h1>Your Opinion Matters</h1>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">
+                                <ul>
+                                    <li>Questions</li>
+                                    <li>Select Your Opinion</li>
+                                </ul>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td>
+                                <select name="" id="">
+                                    <option value="">Yes, I agree</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td>
+                                <select name="" id="">
+                                    <option value="">Yes, I agree</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td>
+                                <select name="" id="">
+                                    <option value="">Yes, I agree</option>
+                                </select>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
