--- a/index.html
+++ b/index.html
@@ -139,5 +139,106 @@
             </div>
         </div>
     </section>
+
+
+    <section class="section5">
+        <div class="container5">
+            <h1>Recent News</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <div class="satalight-box">
+                <div class="box">
+                    <img src="assets/satelite.png " class="img" alt="">
+                    <div class="text-box">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <a href=""><img src="assets/al-jazeera.png" alt=""></a>
+                        <div class="times">
+                            <p>Date: 05/01/2025</p>
+                            <p>Time: 10.25 PM</p>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+                <div class="box box2">
+                    <img src="assets/satelite.png " class="img" alt="">
+                    <div class="text-box">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <a href=""><img src="assets/al-jazeera.png" alt=""></a>
+                        <div class="times">
+                            <p>Date: 05/01/2025</p>
+                            <p>Time: 10.25 PM</p>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="assets/satelite.png " class="img" alt="">
+                    <div class="text-box">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <a href=""><img src="assets/al-jazeera.png" alt=""></a>
+                        <div class="times">
+                            <p>Date: 05/01/2025</p>
+                            <p>Time: 10.25 PM</p>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section6">
+        <div class="container6">
+            <h1>Donate Today</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="price-card-box">
+                <div class="price-card">
+                    <h1>100 Taka</h1>
+                </div>
+                <div class="price-card price-cards">
+                    <h1>200 Taka</h1>
+                </div>
+                <div class="price-card">
+                    <h1>500 Taka</h1>
+                </div>
+                <div class="price-card">
+                    <h1>1000 Taka</h1>
+                </div>
+            </div>
+            <span>Other Amount (Taka)</span>
+            <button>Done Now</button>
+        </div>
+    </section>
+
+    <section class="section7">
+        <div class="container7">
+            <h1>Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+
+            <div class="input-group">
+                <input type="email" name="" id="" placeholder="Enter your email here">
+                <input type="submit" name="" id="" value="Subscribe">
+            </div>
+            <p>We promise not to spam you!</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="foot-container">
+            <h1>Bangladesh 2.0</h1>
+            <hr>
+            <div class="icons">
+                <img src="assets/facebook.png" alt="">
+                <img src="assets/instagram.png" alt="">
+                <img src="assets/x.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
